--- a/heavycenter/src/main/res/layout/item_main_weight_detail.xml
+++ b/heavycenter/src/main/res/layout/item_main_weight_detail.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="item_main_weight_detail"
-            type="String" />
+            type="com.siweisoft.heavycenter.data.netd.jpush.WeightMsg.MessageBean" />
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
