--- a/heavycenter/src/main/res/layout/item_mana_user.xml
+++ b/heavycenter/src/main/res/layout/item_mana_user.xml
@@ -26,7 +26,7 @@
             android:weightSum="1"
             android:layout_height="match_parent"/>
         <RelativeLayout
-
+            android:id="@+id/rl_user"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
