--- a/heavycenter/src/main/res/layout/item_main_order_doing.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_doing.xml
@@ -21,13 +21,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             <RelativeLayout
-                    android:layout_width="120dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content">
                 <LinearLayout
                         android:layout_centerInParent="true"
                         android:gravity="center_horizontal"
                         android:orientation="vertical"
-                        android:layout_width="120dp"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content">
                     <RelativeLayout
                             android:src="@drawable/icon_hv_myce_car"
@@ -37,8 +37,8 @@
                         <com.siweisoft.heavycenter.module.view.circle.CircleBar
                                 android:id="@+id/circlebar"
                                 android:layout_centerInParent="true"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content" />
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent" />
 
                         <LinearLayout
                                 android:orientation="horizontal"
