--- a/heavycenter/src/main/res/layout/frag_scan_info.xml
+++ b/heavycenter/src/main/res/layout/frag_scan_info.xml
@@ -67,6 +67,7 @@
                 android:layout_height="wrap_content" />
 
             <ImageView
+                android:transitionName="right"
                 android:id="@+id/iv_scan"
                 android:layout_marginTop="20dp"
                 android:layout_width="180dp"
