--- a/heavycenter/src/main/res/layout/item_main_msg_all.xml
+++ b/heavycenter/src/main/res/layout/item_main_msg_all.xml
@@ -90,7 +90,7 @@
 
             <LinearLayout
                     android:id="@+id/ll_fuction"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
