--- a/heavycenter/src/main/res/layout/item_mana_store.xml
+++ b/heavycenter/src/main/res/layout/item_mana_store.xml
@@ -15,6 +15,7 @@
         >
 
         <TextView
+            android:layout_gravity="right"
             android:textSize="22sp"
             android:gravity="center"
             android:textColor="@color/white"
@@ -22,7 +23,7 @@
             android:orientation="horizontal"
             android:background="@color/red"
             android:id="@+id/munu"
-            android:layout_width="55dp"
+            android:layout_width="70dp"
             android:weightSum="1"
             android:layout_height="match_parent"/>
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
