--- a/heavycenter/src/main/res/layout/item_main_order_doing.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_doing.xml
@@ -31,14 +31,15 @@
                         android:layout_height="wrap_content">
                     <RelativeLayout
                             android:src="@drawable/icon_hv_myce_car"
-                            android:layout_width="70dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="match_parent">
 
                         <com.siweisoft.heavycenter.module.view.circle.CircleBar
+                                android:transitionName="headimage"
                                 android:id="@+id/circlebar"
                                 android:layout_centerInParent="true"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent" />
+                                android:layout_width="70dp"
+                                android:layout_height="70dp" />
 
                         <LinearLayout
                                 android:orientation="horizontal"
