--- a/heavycenter/src/main/res/layout/item_drawmenu.xml
+++ b/heavycenter/src/main/res/layout/item_drawmenu.xml
@@ -8,12 +8,14 @@
             type="String" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/left_drawer"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="#111"
         android:orientation="vertical"
-        android:clickable="true"></LinearLayout>
+        android:clickable="true">
+
+    </RelativeLayout>
 </layout>
