--- a/heavycenter/src/main/res/layout/item_myce_head.xml
+++ b/heavycenter/src/main/res/layout/item_myce_head.xml
@@ -43,6 +43,7 @@
 
 
                         <de.hdodenhof.circleimageview.CircleImageView
+                            android:transitionName="headimage"
                                 android:layout_centerVertical="true"
                                 android:layout_alignParentRight="true"
                                 android:id="@+id/iv_head"
