--- a/heavycenter/src/main/res/layout/frag_myce_test.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_test.xml
@@ -10,6 +10,7 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/transparent"
         android:orientation="vertical">
 
 
@@ -19,8 +20,8 @@
                 android:layout_centerHorizontal="true"
                 android:id="@+id/iv_head"
                 android:src="@drawable/icon_hv_myce_head"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_alignParentBottom="true"/>
 
     </RelativeLayout>
