--- a/heavycenter/src/main/res/values/values.xml
+++ b/heavycenter/src/main/res/values/values.xml
@@ -12,6 +12,8 @@
     <dimen name="dimen_text_size_20">20sp</dimen>
 
 
-
+    <integer name="anim_duration_very_long">1500</integer>
+    <integer name="anim_duration_long">500</integer>
+    <integer name="anim_duration_medium">300</integer>
 
 </resources>
