--- a/lib/src/main/res/values-v21/base_styles.xml
+++ b/lib/src/main/res/values-v21/base_styles.xml
@@ -13,5 +13,6 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowContentTransitions">true</item>
     </style>
 </resources>
