--- a/lib/src/main/res/values/base_styles.xml
+++ b/lib/src/main/res/values/base_styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="AppThemeNoActionBar" parent="Theme.AppCompat.Light.NoActionBar" />
 
@@ -39,9 +39,10 @@
        <!-- <item name="android:windowAnimationStyle">@style/AnimationActivity</item>-->
         <item name="windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowDrawsSystemBarBackgrounds" tools:ignore="NewApi">true</item>
+        <item name="android:statusBarColor" tools:ignore="NewApi">@android:color/transparent</item>
         <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentTransitions" tools:ignore="NewApi">true</item>
     </style>
 
 </resources>
