--- a/heavycenter/src/main/res/layout/item_main_order_top.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_top.xml
@@ -11,6 +11,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:background="@color/color_base"
+            android:foreground="?android:attr/selectableItemBackground"
             android:layout_height="35dp">
 
             <TextView
