--- a/heavycenter/src/main/res/layout/item_acct_login_edit.xml
+++ b/heavycenter/src/main/res/layout/item_acct_login_edit.xml
@@ -7,6 +7,7 @@
     </data>
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:foreground="?android:attr/selectableItemBackground"
             android:background="@drawable/drawable_bg_edit"
             android:orientation="horizontal"
             android:layout_width="match_parent"
