--- a/heavycenter/src/main/res/layout/item_info_head.xml
+++ b/heavycenter/src/main/res/layout/item_info_head.xml
@@ -9,6 +9,7 @@
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:foreground="?android:attr/selectableItemBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/color_block_back"
