--- a/heavycenter/src/main/res/layout/item_main_msg_trans.xml
+++ b/heavycenter/src/main/res/layout/item_main_msg_trans.xml
@@ -8,6 +8,7 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
+        android:foreground="?android:attr/selectableItemBackground"
         android:background="@color/color_base_graybg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
