--- a/heavycenter/src/main/res/layout/item_main_order_begin.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_begin.xml
@@ -10,6 +10,7 @@
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ll_neworder"
+        android:foreground="?android:attr/selectableItemBackground"
                    android:background="@drawable/bg_hv_sel_dark_light"
                    android:padding="@dimen/dimen_recylce_item_margin">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
