--- a/heavycenter/src/main/res/layout/item_main_order_done.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_done.xml
@@ -11,6 +11,7 @@
         android:background="@drawable/bg_hv_sel_dark_light"
         android:orientation="vertical"
                   android:padding="@dimen/dimen_recylce_item_margin"
+        android:foreground="?android:attr/selectableItemBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
