--- a/heavycenter/src/main/res/layout/item_main_order_trans.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_trans.xml
@@ -13,6 +13,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="110dp"
+        android:foreground="?android:attr/selectableItemBackground"
         >
 
         <RelativeLayout
