--- a/heavycenter/src/main/res/layout/item_main_store_detail.xml
+++ b/heavycenter/src/main/res/layout/item_main_store_detail.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@color/white"
+        android:foreground="?android:attr/selectableItemBackground"
         >
     <LinearLayout
         android:orientation="horizontal"
