--- a/heavycenter/src/main/res/layout/item_main_trans.xml
+++ b/heavycenter/src/main/res/layout/item_main_trans.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
                   android:background="@drawable/bg_hv_sel_dark_light"
+        android:foreground="?android:attr/selectableItemBackground"
         >
         <RelativeLayout
             android:src="@drawable/icon_hv_myce_car"
