--- a/heavycenter/src/main/res/layout/item_mana_car_detail_driver.xml
+++ b/heavycenter/src/main/res/layout/item_mana_car_detail_driver.xml
@@ -9,7 +9,8 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:foreground="?android:attr/selectableItemBackground">
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="horizontal"
             android:background="@color/white"
