--- a/heavycenter/src/main/res/layout/item_mana_car_send.xml
+++ b/heavycenter/src/main/res/layout/item_mana_car_send.xml
@@ -7,6 +7,7 @@
     </data>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:foreground="?android:attr/selectableItemBackground"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:layout_width="match_parent"
