--- a/heavycenter/src/main/res/layout/item_mana_car_top.xml
+++ b/heavycenter/src/main/res/layout/item_mana_car_top.xml
@@ -8,6 +8,7 @@
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_centerInParent="true"
+            android:foreground="?android:attr/selectableItemBackground"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="40dp">
