--- a/heavycenter/src/main/res/layout/item_mana_store.xml
+++ b/heavycenter/src/main/res/layout/item_mana_store.xml
@@ -28,6 +28,7 @@
             android:layout_height="match_parent"/>
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@id/smContentView"
+            android:foreground="?android:attr/selectableItemBackground"
             android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
