--- a/heavycenter/src/main/res/layout/item_myce_unit_bind.xml
+++ b/heavycenter/src/main/res/layout/item_myce_unit_bind.xml
@@ -18,6 +18,7 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingBottom="10dp"
+            android:foreground="?android:attr/selectableItemBackground"
             android:layout_height="wrap_content">
 
             <ImageView
